--- a/_posts/2018-08-03-一个命令玩转web.md
+++ b/_posts/2018-08-03-一个命令玩转web.md
@@ -15,20 +15,19 @@ description: python，php一行命令启动一个http服务。
 
 #### python实现
     
-    ```
     2.x
     python -m SimpleHTTPServer 9999
-
+————————————————————————————————————————————————这是一条分割线----------
     3.x
     python -m http.server 9999
 
-    ```
+
 
 #### php实现
 
-    ```
+    
     php -S 0.0.0.0:9999
-    ```
+    
 
 ### 三、 ending~
 
