add from 0 to 1

--- a/_posts/2018-09-19-从0到1.md
+++ b/_posts/2018-09-19-从0到1.md
@@ -18,14 +18,17 @@ description: 新的目标从零到一。
 ## so？
 又到了定目标的时候了？但是这一次不会再功利，再空想，再只说说而已。
 
-当然不止止专业部分，从英语、经济、专业、各个方面提升自己
+当然不止止专业部分，从英语、经济、专业、各个方面提升自己。
 
 专业方面： 核心进攻区块链，遇到不懂得技术难关一点一点攻破，不要再好高骛远。
+
 英语： 阿甘正传  年底我要会背，从美剧起做一个25能懂“英语的人”
-经济： 学会理财，做一个金融的小白
-健身： 练就一个强壮的体魄，借用刚刚看的一本书的一句话
-健硕的身体和丰沛的心灵才是储存财富的粮仓，没有一个人可以无视这两样上苍最宝贵的赠与。
-感受微风的轻拂，体味秋叶的飘零，对生命细微的触觉与感动才是无与伦比的存在之美。
+
+经济： 学会理财，做一个金融的小白。
+
+健身： 练就一个强壮的体魄，借用刚刚看的一本书的一句话。
+
+健硕的身体和丰沛的心灵才是储存财富的粮仓，没有一个人可以无视这两样上苍最宝贵的赠与。感受微风的轻拂，体味秋叶的飘零，对生命细微的触觉与感动才是无与伦比的存在之美。
 
 
 ## end
