--- a/_posts/2018-11-16-github提升下载速度.md
+++ b/_posts/2018-11-16-github提升下载速度.md
@@ -20,9 +20,13 @@ description: 提升github下载速度，亲测有效。
 
 首先 进入该地址:
 
+```
   https://www.ipaddress.com/
+```
 
-进入该网站后输入域名github.com和github.global.ssl.fastly.net获取对应的ip，比如 192.30.253.112 github.com 和 151.101.185.194 github.global.ssl.fastly.net
+进入该网站后输入域名github.com和github.global.ssl.fastly.net获取对应的ip，
+
+比如 192.30.253.112 github.com 和 151.101.185.194 github.global.ssl.fastly.net
 
 然后把ip + 域名 放到hosts文件中即可完成。
 
@@ -48,4 +52,8 @@ Windows
 Mac
 执行 sudo vi /etc/hosts 追加 219.76.4.4 github-cloud.s3.amazonaws.com
 
-最后执行ipconfig /flushdns命令，刷新 DNS 缓存。
+最后执行ipconfig /flushdns命令，刷新 DNS 缓存。最后刷新 DNS 
+
+```
+ipconfig /flushdns
+```
