--- a/_posts/2018-11-16-github提升下载速度.md
+++ b/_posts/2018-11-16-github提升下载速度.md
@@ -24,9 +24,14 @@ description: 提升github下载速度，亲测有效。
   https://www.ipaddress.com/
 ```
 
-进入该网站后输入域名github.com和github.global.ssl.fastly.net获取对应的ip，
+进入该网站后输入域名**github.com**和**github.global.ssl.fastly.net**获取对应的ip，
 
-比如 192.30.253.112 github.com 和 151.101.185.194 github.global.ssl.fastly.net
+比如 
+192.30.253.112 github.com 
+
+和 
+
+151.101.185.194 github.global.ssl.fastly.net
 
 然后把ip + 域名 放到hosts文件中即可完成。
 
